--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "latest",
+    "tailwindcss/forms": "latest",
     "web-vitals": "^3.1.0"
   },
   "overrides": {
