--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -23,8 +26,9 @@
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
     "build": "npm run build:css && react-scripts build",
-    "build:css": "postcss src/index.css -o src/tailwind.css",
-    "watch:css": "postcss src/index.css -o src/tailwind.css"
+    "build:css": "tailwind build src/styles.css -o dist/tailwind.css",
+    "watch:css": "postcss src/index.css -o src/tailwind.css",
+    "postcss": "postcss src/styles.css -o dist/styles.css"
   },
   "eslintConfig": {
     "extends": [
